채팅서비스 가독성 있게 수정